# AyEDA

Automata celular elemental/: Makefile  README.TXT
Automata celular elemental/src/: cell.cc  cell.h  lattice.cc  lattice.h  main.cc  utilidad.cc  utilidad.h
El Juego de la Vida/: README.TXT
El Juego de la Vida/src/: cell.cc  cell.h  lattice.cc  lattice.h  main.cc  utilidad.cc  utilidad.h
Ordenacion/: CMakeLists.txt
Ordenacion/src/: algoritmos.h  heapsort.h  main_functions.h  nif.h  ordenacion_main.cc  quicksort.h  radixsort.h  seleccion.h  sequence.h  shellsort.h  sortMethods.h
Practica04/: CMakeLists.txt
Practica04/src/: bloque.h  fd_modulo.h  fd_pseudoaleatorio.h  fd_suma.h  fe_cuadratica.h  fe_doble_dispersion.h  fe_lineal.h  fe_redispersion.h  funcion_dispersion.h  funcion_exploracion.h  lista.h  main.cc  secuencia.h  tabla_hash.h  tarjeta.h
Práctica06/: CMakeLists.txt
Práctica06/src/: AB.h  ABB.h  ABE.h  Fechas.h  Nif.h  Nodo.h  main.cc
